add cards users join
