# servers/Sources/MembersServer/DTOs/Cards/CardDTO.swift
@@ -4,9 +4,8 @@ struct CardDTO: Content, Codable {
     var id: UUID
     var cardNumber: String
     var cardPermissions: Int
-    var userId: UUID?
-    var userName: String?
     var name: String?
+    var isActive: Bool
     var createdAt: Date
     var updatedAt: Date
 }
