# servers/Sources/MembersServer/DTOs/Cards/UserCardDTO.swift
@@ -1,0 +1,8 @@
+import Vapor
+
+struct UserCardDTO: Content, Codable {
+    var card: CardDTO
+    var active: Bool
+    var createdAt: Date
+    var updatedAt: Date
+}
