# servers/Sources/MembersServer/DTOs/Cards/UserCardsResponseDTO.swift
@@ -1,0 +1,5 @@
+import Vapor
+
+struct UserCardsResponseDTO: Content, Codable {
+    var userCards: [UserCardDTO]
+}
